# nu_plugin_cer

./: Cargo.toml
src/: certificate.rs  command.rs  error.rs  main.rs  plugin.rs
